# rdd

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: dd.rs  lib.rs
tests/: dd_spawn_with_files.rs  input.txt
